--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,12 @@
       href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+      crossorigin="anonymous"
+    />
     <title>Blog Website</title>
   </head>
   <body>
@@ -16,7 +21,8 @@
       <div
         class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center"
       >
-        <a href="/"
+        <a
+          href="/"
           class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0"
         >
           <svg
@@ -38,23 +44,35 @@
         <nav
           class="md:ml-auto flex flex-wrap items-center text-base justify-center"
         >
-
           {% if user.is_authenticated %}
-          <a class="text-blue-900 font-semibold">Hi, {{user.first_name}}</a>
-          <a href="/accounts/logout" class="inline-flex items-center bg-indigo-700 border-0 py-1 px-3 focus:outline-none hover:bg-indigo-800 rounded text-white mx-4 mt-4 md:mt-0">Logout</a>
+          <a class="text-blue-900 font-semibold capitalize"
+            >Hi, {{user.username}}</a
+          >
+          <a
+            href="/accounts/logout"
+            class="inline-flex items-center bg-indigo-700 border-0 py-1 px-3 focus:outline-none hover:bg-indigo-800 rounded text-white mx-4 mt-4 md:mt-0"
+            >Logout</a
+          >
 
           {% else %}
-          <a href="/accounts/register" class="inline-flex items-center bg-indigo-700 border-0 py-1 px-3 focus:outline-none hover:bg-indigo-800 rounded text-white mx-2 mt-4 md:mt-0">Register</a>
-          <a href="/accounts/login" class="inline-flex items-center bg-indigo-700 border-0 py-1 px-3 focus:outline-none hover:bg-indigo-800 rounded text-white mx-2 mt-4 md:mt-0">Login</a>
+          <a
+            href="/accounts/register"
+            class="inline-flex items-center bg-indigo-700 border-0 py-1 px-3 focus:outline-none hover:bg-indigo-800 rounded text-white mx-2 mt-4 md:mt-0"
+            >Register</a
+          >
+          <a
+            href="/accounts/login"
+            class="inline-flex items-center bg-indigo-700 border-0 py-1 px-3 focus:outline-none hover:bg-indigo-800 rounded text-white mx-2 mt-4 md:mt-0"
+            >Login</a
+          >
+          {% endif %} {% if user.is_superuser %}
+          <a
+            href="/post/add"
+            class="inline-flex items-center bg-indigo-700 border-0 py-1 px-3 focus:outline-none hover:bg-indigo-800 rounded text-white mx-2 mt-4 md:mt-0"
+            >Add Post</a
+          >
           {% endif %}
-
-          {% if user.is_superuser %}
-          <a href="/post/add" class="inline-flex items-center bg-indigo-700 border-0 py-1 px-3 focus:outline-none hover:bg-indigo-800 rounded text-white mx-2 mt-4 md:mt-0">Add Post</a>
-          {% endif %}
-
-
         </nav>
-        
       </div>
     </header>
     <!-- end-header -->
@@ -121,13 +139,25 @@
               ></path>
             </svg>
           </a> -->
-          <a class="ml-3 text-gray-500 cursor-pointer" href="https://github.com/NeelamAryaa" style="color: #24292e" target="_blank">
+          <a
+            class="ml-3 text-gray-500 cursor-pointer"
+            href="https://github.com/NeelamAryaa"
+            style="color: #24292e"
+            target="_blank"
+          >
             <i class="fa fa-github-square fa-2x" aria-hidden="true"></i>
           </a>
-                                            
-          <a class="ml-3 text-gray-500 cursor-pointer" href="https://www.linkedin.com/in/neelam-aryaa-121a441a8" target="_blank">
-            
-            <i class="fa fa-linkedin-square fa-2x" aria-hidden="true" style="color: #0a66c2"></i>
+
+          <a
+            class="ml-3 text-gray-500 cursor-pointer"
+            href="https://www.linkedin.com/in/neelam-aryaa-121a441a8"
+            target="_blank"
+          >
+            <i
+              class="fa fa-linkedin-square fa-2x"
+              aria-hidden="true"
+              style="color: #0a66c2"
+            ></i>
           </a>
         </span>
       </div>
